# pulse-sdk

./: .gitignore  .pnp.cjs  AGENTS.md  CLAUDE.md  COMO_PUBLICAR.md  README.md  biome.json  eslint.config.js  llms-full.txt  llms.txt  openapi.yaml  package-lock.json  package.json  tsup.config.ts
.github/workflows/: publish.yml
docs/: prd-sdk-billing-update.md  quickstart.md
examples/: ai-agent-billing.ts
examples/ai-agent/: .env.example  package.json
examples/ai-agent/src/: agent-server.ts  setup.ts  test-client.ts
examples/nextjs-checkout/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
examples/nextjs-checkout/app/: EmbeddedCheckout.tsx  layout.tsx  page.tsx
examples/nextjs-checkout/app/api/events/: route.ts
examples/nextjs-checkout/app/api/payment-links/: route.ts
examples/nextjs-checkout/app/api/webhooks/: events.ts  route.ts
n8n/: package-lock.json  package.json  tsconfig.json
n8n/credentials/: PulseApi.credentials.ts
n8n/nodes/Pulse/: Pulse.node.ts  PulseTrigger.node.ts
python/: pyproject.toml
python/src/pulse_sdk/: __init__.py  billing.py  client.py  errors.py  http_client.py  metering.py  types.py
src/: ai.ts  checkout.standalone.ts  client.ts  errors.ts  index.ts  types.ts
src/__tests__/: ai.test.ts  checkout.test.ts  client.test.ts  errors.test.ts  metering.test.ts  payment-links.test.ts  pulse.test.ts  verify.test.ts  webhooks.test.ts
src/checkout/: checkout.ts  index.ts  types.ts
src/resources/: billing.ts  metering.ts  payment-links.ts  webhooks.ts
src/webhooks/: verify.ts
