[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pulse-sdk"
version = "0.1.0"
description = "Python SDK for the Pulse Payment & Metering Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pulse", "metering", "billing", "usage-based", "sdk", "api"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[project.urls]
Homepage = "https://github.com/Be-Infinitum/pulse-sdk"
Repository = "https://github.com/Be-Infinitum/pulse-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse_sdk"]
